--- a/roles/filebrowser/tasks/main.yml
+++ b/roles/filebrowser/tasks/main.yml
@@ -59,7 +59,7 @@
       traefik.enable: "{{ filebrowser_available_externally }}"
       traefik.http.routers.filebrowser.rule: "Host(`{{ filebrowser_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.filebrowser.loadbalancer.server.port: "80"
-      # traefik.http.routers.filebrowser.middlewares: "my-headers"
+      traefik.http.routers.filebrowser.middlewares: "my-headers@file"
 
 - name: Syncthing Docker Container
   docker_container:
@@ -75,7 +75,6 @@
       PUID: "{{ filebroswer_uid }}"
       PGID: "{{ filebroswer_gid }}"
     ports:
-      # - "8384:8384" # web ui - we pass it through traefik
       - "22000:22000"
       - "21027:21027/udp"
     restart_policy: unless-stopped
@@ -83,4 +82,4 @@
       traefik.enable: "{{ filebrowser_available_externally }}"
       traefik.http.routers.syncthing.rule: "Host(`{{ syncthing_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.syncthing.loadbalancer.server.port: "8384"
-      # traefik.http.routers.syncthing.middlewares: "my-headers"
+      traefik.http.routers.syncthing.middlewares: "my-headers@file"
