--- a/roles/filebrowser/defaults/main.yml
+++ b/roles/filebrowser/defaults/main.yml
@@ -4,6 +4,7 @@ filebrowser_available_externally: "true"
 
 filebrowser_data_directory: "{{ docker_home }}/filebrowser"
 filebrowser_files_directory: "{{ files_home }}/"
+filebrowser_files_music_directory: "{{ files_home }}/Music/"
 
 filebrowser_container: "filebrowser/filebrowser"
 filebrowser_version: "v2.28.0-s6"
@@ -12,6 +13,7 @@ filebrowser_subdomain: "fb"
 syncthing_subdomain: "st"
 sftpgo_subdomain: "sftp"
 webdav_subdomain: "webdav"
+lms_subdomain: "lms"
 
 filebroswer_uid: "{{ admin_uid }}"
 filebroswer_gid: "{{ admin_gid }}"
