--- a/provisioning.yml
+++ b/provisioning.yml
@@ -144,6 +144,11 @@
         - navidrome
       when: (navidrome_enabled | default(False))
 
+    - role: vaultwarden
+      tags:
+        - vaultwarden
+      when: (vaultwarden_enabled | default(False))
+
     - role: geerlingguy.security
 
     - role: cheatsheet
