--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
 - name: Delete Portainer directories
-  file:
+  ansible.builtin.file:
     path: "{{ portainer_data_directory }}"
     state: absent
 
 - name: Create Portainer Directories
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
   with_items:
     - "{{ portainer_data_directory }}"
 
 - name: Portainer Docker Container
-  docker_container:
+  community.docker.docker_container:
     name: portainer
     image: portainer/portainer-ce
     pull: true
