--- a/roles/doku/tasks/main.yml
+++ b/roles/doku/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Doku Docker Container
-  docker_container:
+  community.docker.docker_container:
     name: doku
     image: amerkurev/doku
     pull: true
