--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: Get docker group id
-  group:
+  ansible.builtin.group:
     name: docker
   register: docker_group
 
 - name: Netdata Docker Container
-  docker_container:
+  community.docker.docker_container:
     name: netdata
     hostname: "{{ netdata_subdomain }}.{{ server_hostname }}"
     image: netdata/netdata
