--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -10,15 +10,23 @@
     hostname: "{{ netdata_subdomain }}.{{ server_hostname }}"
     image: netdata/netdata
     state: started
+    detach: true
     pull: true
     volumes:
-      - "/proc:/host/proc:ro"
-      - "/sys:/host/sys:ro"
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - /etc/passwd:/host/etc/passwd:ro
+      - /etc/group:/host/etc/group:ro
+      - /etc/localtime:/etc/localtime:ro
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /etc/os-release:/host/etc/os-release:ro
+      - /var/log:/host/var/log:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /run/dbus:/run/dbus:ro
     env:
       PGID: "{{ docker_group.gid }}"
     capabilities:
       - SYS_PTRACE
+      - SYS_ADMIN
     security_opts:
       - apparmor:unconfined
     restart_policy: unless-stopped
