--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -14,7 +14,7 @@
 - name: Portainer Docker Container
   community.docker.docker_container:
     name: portainer
-    image: portainer/portainer-ce
+    image: portainer/portainer-ce:2.20.3
     pull: true
     recreate: yes
     volumes:
