--- a/roles/server_general_preparations/tasks/main.yml
+++ b/roles/server_general_preparations/tasks/main.yml
@@ -7,6 +7,7 @@
   community.general.timezone:
     name: "{{ server_timezone }}"
 
+# TODO: why commented? fix
 # - name: Ensure the locale en_US.UTF-8 exists
 #   locale_gen:
 #     name: en_US.UTF-8
