--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -17,7 +17,7 @@ root_userpassword: change_this
 
 admin_authorized_keys: ""
 
-server_timezone: Europe/Moscow
+server_timezone: Etc/UTC
 server_hostname: mayurifag.local
 swap_file_size_mb: "2048"
 swap_swappiness: "25"
@@ -81,9 +81,6 @@ doku_subdomain: "doku"
 
 whattocommit_enabled: true
 whattocommit_subdomain: "commit"
-
-ocis_enabled: true
-ocis_subdomain: "ocis"
 
 filebrowser_enabled: true
 filebrowser_subdomain: "fb"
